[package]
name = "wy_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wy_common = { path = "../common" }
wy_syntax = { path = "../syntax" }
wy_graph = { path = "../graph" }
wy_intern = { path = "../intern" }
wy_pretty = { path = "../pretty" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
wy_parser = { path = "../parser" }