[package]
name = "wy_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"

wy_common = { path = "../common" }
wy_syntax = { path = "../syntax" }
wy_graph = { path = "../graph" }
wy_intern = { path = "../intern" }
wy_name = { path = "../name" }
wy_pretty = { path = "../pretty" }


[dev-dependencies]
wy_parser = { path = "../parser" }
wy_session = { path = "../session" }