[package]
name = "wy_failure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wy_span = { path = "../span" }
wy_intern = { path = "../intern" }
wy_pretty = { path = "../pretty" }

# [dev-dependencies]
pretty_assertions = "1.2.1"