[package]
name = "wy_name"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"

wy_common = { path = "../common" }
wy_graph = { path = "../graph" }
wy_intern = { path = "../intern" }
wy_pretty = { path = "../pretty" }


[dev-dependencies]
wy_parser = { path = "../parser" }
wy_session = { path = "../session" }