[package]
name = "wy_session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "*" 
wy_sources = { path = "../sources" }
wy_parser = { path = "../parser" }
wy_syntax = { path = "../syntax" }
wy_check = { path = "../check" }
wy_intern = { path = "../intern" }
wy_name = { path = "../name" }
wy_span = { path = "../span" }
wy_failure = { path = "../failure" }
