[package]
name = "wy_session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"

wy_common = { path = "../common" }
wy_sources = { path = "../sources" }
wy_parser = { path = "../parser" }
wy_syntax = { path = "../syntax" }
wy_semantics = { path = "../semantics" }
wy_intern = { path = "../intern" }
wy_name = { path = "../name" }
wy_span = { path = "../span" }
wy_failure = { path = "../failure" }
