[package]
name = "wy_sources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wy_common = { path = "../common" }
wy_intern = { path = "../intern" }
wy_span = { path = "../span" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
toml = "0.5.9"

# walkdir = "2.3.2"
lazy_static = "1.4.0"