[package]
name = "wy_syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
wy_common = { path = "../common" }
wy_intern = { path = "../intern" }
wy_failure = { path = "../failure" }
wy_span = { path = "../span" }
wy_lexer = { path = "../lexer" }
wy_graph = { path = "../graph" }
